# SMATM103

./: CMakeLists.txt  cgradient.c  cgradient.h  kinds.h  main.c  matrix.c  matrix.h  precond.c  precond.h  run.sh
src/: cgradient.c  cgradient.h  kinds.h  main.c  matrix.c  matrix.h  precond.c  precond.h
